# Sony-PI-Camera-Control

./: .gitignore  .gitmodules  CAMERA_CONTROL_IMPLEMENTATION.md  CMakeLists.txt  CMakePresets.json  PROJECT_SESSION_SUMMARY.md  PROJECT_STATUS_2026-02-05.md  README.md  SHORTCUTS.md  USAGE_GUIDE.md  a74_recording_test.py  camera_commands.sh  camera_record.sh  discover_cameras.sh  instant_record.sh  python_sony_wrapper.py  quick_rec.sh  run_ccu.sh  setup_8cameras.sh  setup_authentication.sh  setup_flexible_cameras.sh  simple_record.sh  sony_a74_controller.py  sony_a74_final.py  sony_a74_record.sh  sony_camera_api.py  sony_crsdk_authentication_connection_findings.md  start_ccu.sh  test_camera_detection.py  test_movie_button.sh  test_remotecli_control.py  ultrafast_camera.sh  working_record.sh  working_sony_api.py
CCU_Codex_Docs/: 03_ccu_bus_spec.md  05_sony_pi_daemon.md  06_red_backend.md  07_arri_cap_backend.md  09_repo_layout.md
docs/: 8CAMERA_GUIDE.md  A74_RECORD_FREEZE_2026-02-08.md  CONNECTION_OPTIONS.md  PROJECT_DOCS_README.md  PROJECT_SESSION_SUMMARY.md  PROJECT_STATUS_2026-02-05.md  README.md  RECORDING_SOLUTIONS.md  SHORTCUTS.md  TECHNICAL_PROBLEMS.md  TEENSY_CCU_CONTROLLER_BRIEF.md  USAGE_GUIDE.md  WIRELESS_SETUP.md  camera_control_unit_pi_sony_crsdk_project_brief_working_context.md  ccu_pi_discovery_transfer.md  ccu_status_payload.md  uart_pi_bridge.md
docs/CCU_Codex_Docs/: 01_architecture.md  02_transports.md  04_multicam_model.md  08_cst_v12_reference.md  10_acceptance_tests.md  README.md
pi_controller/: CMakeLists.txt  camera_control_test.cpp  flexible_connection_manager.hpp  multi_camera_config.hpp  run_ccu.sh  test_direct_connect.cpp  test_direct_simple  test_direct_simple.cpp  test_sony.cpp
pi_controller/docs/: camera_control_unit_pi_sony_crsdk_project_brief_working_context.md
pi_controller/src/: CameraRemote_SDK.h  a74_eth_settings_test.cpp  a74_eth_stills_test.cpp  a74_usb_record_test.cpp  a74_usb_settings_test.cpp  a74_usb_stills_test.cpp  camera_auth_success_test.cpp  camera_control_test.cpp  camera_controller.cpp  camera_controller.hpp  ccu_diag.cpp  connection_test.cpp  detailed_auth_test.cpp  direct_record.cpp  direct_sony_api.cpp  fingerprint_auth_test.cpp  main.cpp  minimal_test.cpp  movie_record_test.cpp  protocol.cpp  protocol.hpp  remotecli_test.cpp  simple_camera_test.cpp  simple_recording_test.cpp  simple_sdk_test.cpp  sony_a74_direct_api.cpp  sony_a74_usb_test.cpp  sony_backend.cpp  sony_backend.hpp  sony_interactive_test.cpp  sony_test.cpp  uart_transport.cpp  uart_transport.hpp  udp_server.cpp  udp_server.hpp  working_sdk_test.cpp
pi_controller/src/CRSDK/: ._CameraRemote_SDK.h
pi_controller/src/sony_sample/: CameraDevice.cpp  CameraDevice.h  CrDebugString.cpp
pi_controller/tools/: ccu_cli.cpp
project_docs/docs/: API_DOCUMENTATION.md  PROJECT_SESSION_SUMMARY.md  USAGE_GUIDE.md  sony_crsdk_authentication_connection_findings.md
shared/: ccu_link_protocol_v1.h
systemd/: ccu-daemon.env.example  ccu-daemon.service
